--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,10 @@
                         <a class="nav-link" href="{% url 'words:card_mode' %}">Карточный режим</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'words:user_progress' %}">Прогресс</a>
+                        <a class="nav-link" href="{% url 'quiz:choose_test' %}">Тест</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'stats:dashboard' %}">Статистика</a>
                     </li>
                 </ul>
 
