--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -27,6 +27,13 @@
         </div>
     </form>
 
-
+    <div class="mt-3 text-center">
+        <a href="{% url 'password_reset' %}" class="btn btn-link">Забыли пароль?</a>
+    </div>
+    
+    <div class="mt-2 text-center">
+        <span class="text-muted">Нет аккаунта?</span>
+        <a href="{% url 'users:register' %}" class="btn btn-link">Зарегистрироваться</a>
+    </div>
 </div>
 {% endblock %}
